[package]
name = "exa-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.5.0"
chrono = { version = "0.4.33", default-features = false, features = ["serde"] }
reqwest = { version = "0.11.24", default-features = false, features = [
    "json",
    "stream",
] }
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_urlencoded = "0.7.1"
